--- a/src/app/pages/dte/audience/edit/audience-edit.component.html
+++ b/src/app/pages/dte/audience/edit/audience-edit.component.html
@@ -117,10 +117,11 @@
           </div>
 
           <div
-            fxLayout="row"
-            *ngIf="formAudience.get('type').value === 'challenge'"
+            fxLayout="column"
+            fxLayoutGap="16px"
+            fxFlex="40"
           >
-            <mat-form-field fxFlex="45" class="is-light form-primary">
+            <mat-form-field class="is-light form-primary" *ngIf="formAudience.get('type').value === 'challenge'">
               <mat-select formControlName="trade_creator_id" placeholder="{{'dte.trade_program.text3' | translate}}">
                 <ngx-mat-select-search [formControl]="filterTradeProgram" placeholderLabel="{{'global.label.search' | translate}}"
                   noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"></ngx-mat-select-search>
@@ -132,6 +133,20 @@
                 *ngIf="formAudience.controls['trade_creator_id'].hasError('required') && formAudience.controls['trade_creator_id'].touched">
                 {{'dte.trade_program.text3' | translate}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="is-light">
+              <mat-select
+                placeholder="Business Type"
+                formControlName="business_type"
+              > 
+                <mat-option
+                  *ngFor="let item of businessType"
+                  [value]="item.value"
+                >
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
             </mat-form-field>
           </div>
         </form>
