--- a/src/app/pages/dte/audience/edit/personalize/audience-edit-personalize.component.html
+++ b/src/app/pages/dte/audience/edit/personalize/audience-edit-personalize.component.html
@@ -39,6 +39,20 @@
                     {{'dte.audience.publish_mission' | translate}} {{'global.messages.mandatory_text' | translate}} <!-- // TODO -->
                   </mat-error>
                 </mat-form-field>
+
+                <mat-form-field class="is-light">
+                  <mat-select
+                    placeholder="Business Type"
+                    formControlName="business_type"
+                  > 
+                    <mat-option
+                      *ngFor="let item of businessType"
+                      [value]="item.value"
+                    >
+                      {{item.name}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
               </div>
 
               <div fxLayout="column">
@@ -72,7 +86,7 @@
                   </mat-form-field>
                 </form>
                 <form [formGroup]="formFilterRetailer" fxLayout="column">
-                  <mat-form-field class="is-light form-primary">
+                  <mat-form-field class="is-light form-primary" *ngIf="formAudience.get('business_type').value !== 'wholesaler'">
                     <mat-select placeholder="{{'dte.audience.text13' | translate}}" formControlName="retail_classification" multiple>
                       <mat-option *ngFor="let item of retailClassification" [value]="item.value" (onSelectionChange)="handleClassification($event)">
                         {{item.name}}
