--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -128,7 +128,7 @@
                 *ngIf="formBankAccount.controls['bank_name'].hasError('required') && formBankAccount.controls['bank_name'].touched">
                 {{ ls.locale.global.label.bank_name }} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
-              <div fxFlex="2" *ngIf="!isDetail && formBankAccount.get('bank_name').value">
+              <div fxFlex="2" *ngIf="!isDetail && formBankAccount.get('bank_name').value && editBankStatus">
                 <button mat-icon-button color="" (click)="clearBankName()">
                   <mat-icon class="secondary-text">close</mat-icon>
                 </button>
