--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -302,7 +302,7 @@
                       noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}">
                     </ngx-mat-select-search>
                     <mat-option *ngFor="let item of filteredBanks | async" [value]="item.name">
-                      {{item.name}}
+                      {{remaskTemplate(viewBankStatus, item.name, 3)}}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
@@ -384,7 +384,7 @@
               [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [limit]="5">
               <ngx-datatable-column name="{{'global.label.phone' | translate}} {{'retailer.detail.pojok_bayar' | translate}}" prop="no_pojok_bayar">
                 <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                  <div class="name-container">{{row.no_pojok_bayar || '-'}}</div>
+                  <div class="name-container">{{remaskTemplate(viewPhoneNumberPBStatus, row.no_pojok_bayar, 4) || '-'}}</div>
                 </ng-template>
               </ngx-datatable-column>
               <ngx-datatable-column name="First Validation" prop="first_validation">
