--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -121,7 +121,7 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <div fxLayout="row" style="margin-bottom: 10px;">
+          <div fxLayout="row" class="mb-16">
             <mat-radio-group formControlName="type">
               <mat-radio-button
                 class="radio-button pr-48"
