--- a/src/app/pages/settings/role/edit/role-edit.component.html
+++ b/src/app/pages/settings/role/edit/role-edit.component.html
@@ -109,8 +109,8 @@
                 *ngIf="items.nama !== 'approval coin adjustment' && items.nama !== 'task verification'">
                 <div fxLayout="row wrap" fxLayoutAlign="start center">
                   <div fxFlex="25" *ngFor="let item of items.value">
-                    <div class="access-name" *ngIf="item.nama == 'gsw'">{{item.nama | uppercase}}</div>
-                    <div class="access-name" *ngIf="item.nama !== 'gsw'">{{item.nama | toCapitalize}}</div>
+                    <div class="access-name" *ngIf="item.nama == 'gsw'">{{renameTitle(item.nama) | uppercase}}</div>
+                    <div class="access-name" *ngIf="item.nama !== 'gsw'">{{renameTitle(item.nama) | toCapitalize}}</div>
                     <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status"
                       [disabled]="isDetail || item.disabled" (change)="onToggleChange(item, items, role, $event)">
                     </mat-slide-toggle>
