--- a/src/app/pages/tactical-retail-sales/trs-proposal/index/trs-proposal.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/index/trs-proposal.component.html
@@ -1,3 +1,188 @@
-<p>
-  trs-proposal works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header contentTitle="TRS Proposal">
+    <div class="button-row" fxLayout="row">
+      <button *ngIf="permission?.buat" style="width: 170px;" mat-raised-button aria-label="Login" type="button"
+        [routerLink]="['/tactical-retail-sales','trs-proposal','create']">
+        <mat-icon>add</mat-icon>{{ls.locale.global.button.add}}
+      </button>
+      <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
+    </div>
+  </page-content-header>
+  <!-- / HEADER -->
+
+  <div class="content" *ngIf="!onLoad">
+    <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
+      style="background-color: #585858;" fxLayoutAlign="end center" class="p-16 export">
+      <a #downloadLink></a>
+      <button *ngIf="permission.export" (click)="exportwholesaler()" mat-raised-button type="button" class="is-danger">
+        <mat-icon>arrow_upward</mat-icon> Export XLS
+      </button>
+    </div>
+    <div class="table-wrapper">
+      <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+
+        <h2 class="pl-8" *ngIf="!isShared">TRS Proposal</h2>
+
+        <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+          <mat-icon>search</mat-icon>
+          <mat-form-field class="is-light tab-search">
+            <input matInput [placeholder]="ls.locale.global.label.search" (keyup)="keyUp.next($event.target.value)"
+              autocomplete="off">
+          </mat-form-field>
+        </div>
+      </div>
+      <form [formGroup]="formFilter" autoComplete="off">
+        <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+          <mat-form-field fxFlex="7%" class="is-light form-primary">
+            <mat-select placeholder="{{'global.area.national' | translate}}" formControlName="national">
+              <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
+            <mat-select placeholder="{{'global.area.zone' | translate}}" formControlName="zone" multiple>
+              <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all' ?
+                'Semua
+                Zona' :
+                item.code}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="7%" class="is-light form-primary">
+            <mat-select placeholder="{{'global.area.regional' | translate}}" formControlName="region" multiple>
+              <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name === 'all'
+                ? 'Semua
+                Regional'
+                :
+                item.code}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="7%" class="is-light form-primary">
+            <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area" multiple>
+              <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all' ?
+                'Semua
+                Area'
+                :
+                item.code}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="7%" class="is-light form-primary">
+            <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint" multiple>
+              <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name ===
+                'all' ?
+                'Semua
+                Salespoint'
+                :
+                item.code}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+
+          <div fxFlex="1%" class=""></div>
+
+          <mat-form-field fxFlex="7%" class="orders datepicker is-light">
+            <input matInput #date_start [matDatepicker]="dari" (focus)="dari.open()" placeholder="{{ls.locale.dte.pengatur_jadwal_program.text5}}"
+              formControlName="date_start" (dateChange)="setMinDate(formFilter.get('date_start').value)" readonly>
+            <button mat-button *ngIf="formFilter.get('date_start').value" matSuffix mat-icon-button aria-label="Clear"
+              (click)="formFilter.get('date_start').setValue('')">
+              <mat-icon>close</mat-icon>
+            </button>
+            <mat-datepicker-toggle matSuffix [for]="dari">
+              <mat-icon matDatepickerToggleIcon>calendar_today</mat-icon>
+            </mat-datepicker-toggle>
+            <mat-datepicker #dari></mat-datepicker>
+          </mat-form-field>
+
+          <mat-form-field fxFlex="7%" class="orders datepicker is-light">
+            <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate"
+              placeholder="{{ls.locale.dte.pengatur_jadwal_program.text6}}" formControlName="date_end" readonly>
+            <button mat-button *ngIf="formFilter.get('date_end').value" matSuffix mat-icon-button aria-label="Clear"
+              (click)="formFilter.get('date_end').setValue('')">
+              <mat-icon>close</mat-icon>
+            </button>
+            <mat-datepicker-toggle matSuffix [for]="sampai">
+              <mat-icon matDatepickerToggleIcon>calendar_today</mat-icon>
+            </mat-datepicker-toggle>
+            <mat-datepicker #sampai></mat-datepicker>
+          </mat-form-field>
+
+          <div fxFlex="1%" class=""></div>
+
+          <mat-form-field fxFlex="10.5%" class="orders dropdown">
+            <mat-select formControlName="status">
+              <mat-option [value]="formFilter.get('status').value" *ngFor="let status of statusList">{{status.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+      </form>
+      <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
+        [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
+        [rowHeight]="'auto'" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
+        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+        (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)" [selectionType]="'checkbox'">
+
+        <ngx-datatable-column [width]="48" [canAutoResize]="false" [sortable]="true">
+          <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
+            let-selectFn="selectFn">
+            <mat-checkbox [checked]="allRowsSelected"></mat-checkbox>
+          </ng-template> -->
+
+          <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected" let-onCheckboxChangeFn="onCheckboxChangeFn" let-row="row">
+            <mat-checkbox [checked]="selected.includes(row)" (change)="onSelect($event, row)"></mat-checkbox>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="program_code" prop="program_code">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.program_code }}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="area_name" prop="area_name">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.area_name }}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="start_date" prop="start_date">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.start_date }}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="end_date" prop="end_date">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.end_date }}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="created_at" prop="created_at">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.created_at }}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="modified_at" prop="modified_at">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.modified_at }}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column [width]="60" [name]="ls.locale.global.label.action" headerClass="textright"
+          [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+            style="justify-content: center !important">
+            <div class="button-row pl-8">
+              <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
+                <mat-icon class="secondary-text">assignment</mat-icon>
+              </button>
+              <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+                <mat-icon class="secondary-text">edit</mat-icon>
+              </button>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
+      </ngx-datatable>
+    </div>
+  </div>
+</div>
